using pixels to circle images

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               </div>
 
             <div class="d-flex flex-column mrg">
-                <h3 class="text-center f-size f-size-tab p-4">The search portal for finding houses is working in four simple ways </h3>
+                <h3 class="text-center f-size f-size-tab f-size-lap p-4 directions-col">The search portal for finding houses is working in four simple ways </h3>
               <div class="d-flex flex-wrap">
                 <div class="col-12 col-lg-6 mb-2 srch-inf-cont">
                   <div class="card text-center br-none">
