--- a/result-page.html
+++ b/result-page.html
@@ -93,7 +93,7 @@
             </div>
 
             <div class="row">
-              <h4 class="text-center p-3 display-4 icon-style-map mrg">The Search Result Found 7 Rental-Houses</h4> 
+              <h4 class="text-center p-3 display-4 mrg display-4-fsize ">The Search Result Found 7 Rental-Houses</h4> 
               <div class="d-flex flex-*-fill flex-wrap container-mrg-l">
                 <div class="col-12 col-md-6 col-lg-4 mb-2 max-wdth-card pr-md-1 pr-lg-1 pl-lg-1 mrg">
                     <div class="card">                      
@@ -102,18 +102,18 @@
                                 <div class="p-2 pt-4">
                                   <ul class="list-group list-group-flush text-center line-h">
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white">
-                                    <a href="application-page.html" class="c-white header-a"> Location: Istanbul
+                                    <h6 class="c-white search-res-fSize">
+                                    <a href="application-page.html" class="c-white header-a "> Location: Istanbul
                                     </a></h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><a href="application-page.html" class="c-white header-a"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    <h6 class="c-white search-res-fSize"><a href="application-page.html" class="c-white header-a"><i class="fa fa-address-book-o" aria-hidden="true"></i>
                                     District: Pera</a></h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="fa fa-calendar" aria-hidden="true"></i>
                                     Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="far fa-calendar-check"></i>
                                     Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
@@ -128,17 +128,17 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h6 class="c-white">Location: Istanbul
+                                        <h6 class="c-white search-res-fSize">Location: Istanbul
                                         </h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    <h6 class="c-white search-res-fSize"><i class="fa fa-address-book-o" aria-hidden="true"></i>
                                     District: Pera</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="fa fa-calendar" aria-hidden="true"></i>
                                     Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="far fa-calendar-check"></i>
                                     Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
@@ -153,17 +153,17 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h6 class="c-white">Location: Istanbul
+                                        <h6 class="c-white search-res-fSize">Location: Istanbul
                                         </h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    <h6 class="c-white search-res-fSize"><i class="fa fa-address-book-o" aria-hidden="true"></i>
                                     District: Pera</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="fa fa-calendar" aria-hidden="true"></i>
                                     Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="far fa-calendar-check"></i>
                                     Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
@@ -178,17 +178,17 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h6 class="c-white">Location: Istanbul
+                                        <h6 class="c-white search-res-fSize">Location: Istanbul
                                         </h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    <h6 class="c-white search-res-fSize"><i class="fa fa-address-book-o" aria-hidden="true"></i>
                                     District: Pera</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="fa fa-calendar" aria-hidden="true"></i>
                                     Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="far fa-calendar-check"></i>
                                     Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
@@ -203,17 +203,17 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h6 class="c-white">Location: Istanbul
+                                        <h6 class="c-white search-res-fSize">Location: Istanbul
                                         </h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    <h6 class="c-white search-res-fSize"><i class="fa fa-address-book-o" aria-hidden="true"></i>
                                     District: Pera</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="fa fa-calendar" aria-hidden="true"></i>
                                     Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="far fa-calendar-check"></i>
                                     Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
@@ -228,17 +228,17 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h6 class="c-white">Location: Istanbul
+                                        <h6 class="c-white search-res-fSize">Location: Istanbul
                                         </h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    <h6 class="c-white search-res-fSize"><i class="fa fa-address-book-o" aria-hidden="true"></i>
                                     District: Pera</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="fa fa-calendar" aria-hidden="true"></i>
                                     Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="far fa-calendar-check"></i>
                                     Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
@@ -253,17 +253,17 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h6 class="c-white">Location: Istanbul
+                                        <h6 class="c-white search-res-fSize">Location: Istanbul
                                         </h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    <h6 class="c-white search-res-fSize"><i class="fa fa-address-book-o" aria-hidden="true"></i>
                                     District: Pera</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="fa fa-calendar" aria-hidden="true"></i>
                                     Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    <h6 class="pr-1 c-white search-res-fSize"><i class="far fa-calendar-check"></i>
                                     Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
